list lições a aprender + pequenas configurações na foto e alinhamento do header

--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
                 <li>HTML semântico e sua importância</li>
             </ol>
         </div>
-        <div>
+        <div id="container-lista-licoes_a_aprender">
             <h2>Lições a aprender daqui para frente:</h2>
-            <ul>
-                
+            <ul id="licoes_a_aprender">
+                <li>Aprendizado continuo de soft skills</li>
+                <li>JavaScript introdução</li>
+                <li>JavaScript array e loop for</li>
+                <li>Lógica de programação</li>
+                <li>JavaScript direcionado a objetos</li>
+                <li>Objetos e funções</li>
+                <li>Quem é esse cara chamado DOM</li>
+                <li>Desenvolvimento responsivo</li>
+                <li>Bibliotecas JS</li>
+                <li>Metodologias ágeis</li>
             </ul>
         </div>
     </main>
