--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     <li>Python</li>
     <li>Metodolodias Ágeis</li>
   </ul>
+  <footer id="rodape">
+    <p>Natália Negreiros | Trybe</p>
+  </footer>
 </body>
 </html>
