--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <!--  A foto deve ser inserida utilizando
       uma tag img com o ID "minha_foto" -->
     <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
-<!--  A lista deve ser numerada e possuir 
-      o ID "licoes_aprendidas" -->
+<!--  A lista deve ser numerada e possuir o ID "licoes_aprendidas" -->
     <ul id="licoes_aprendidas">
 <!-- A lista deve possuir 10 itens -->
       <li>Linux</li>
@@ -32,8 +31,7 @@
       <li>Colaboração</li>
       <li>Empatia</li>
     </ul>
-<!--  A lista deve ser numerada e possuir 
-      o ID "licoes_a_aprender" -->
+<!--  A lista deve ser numerada e possuir o ID "licoes_a_aprender" -->
     <ul id="licoes_a_aprender">
 <!-- A lista deve possuir 10 itens -->
       <li>JavaScript</li>
@@ -47,6 +45,9 @@
       <li>Back-End</li>
       <li>Node.JS</li>
     </ul>
+<!-- A configuração desse link deve ser feita para 
+     abrir em uma nova aba do navegador -->
+    <a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a>
 
     <footer id="rodape">
       Desenvolvido por: Felipe Brigagão de Almeida - 24 de Novembro de 2020.
