add step 7, link at footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </main>
         <footer #rodape>
-            rodape
+            <a href="https://www.lipsum.com/">Gerador de Textos</a>
         </footer>
     </body>
 </html>
