--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <h1 id="titulo">Título</h1>
     </header>
 
+    <main>
+        <img id="minha_foto" src="img/minha_foto.jpg" alt="Minha foto">
+    </main>
+
 </body>
 </html>
