--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <li>Colaboração</li>
         <li>Analise</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Interação</li>
+        <li>Node</li>
+        <li>DOM</li>
+        <li>CSS Responsive  </li>
+        <li>React</li>
+        <li>SQL</li>
+        <li>Feedback assertivo</li>
+        <li>Controle da ansiedade</li>
+        <li>Unit Tests</li>
+    </ul>
     </main>
 </body>
 </html>
