--- a/index.html
+++ b/index.html
@@ -8,20 +8,40 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Lições aprendidas - trybe</h1>
+        <h1 id="titulo">Lições aprendidas - trybe</h1>
     </header>
-    <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Empatia</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-    </ol>
+    <main>
+        <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
+        <article>    
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+            </section>
+            <section>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node.js</li>
+                    <li>SQL</li>
+                </ul>
+            </section>
+        </article>
+    </main>
 </body>
 </html>
