--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--                                           --- HEADER ---                                                     -->
     <header id="cabecalho">
         <h1 id="titulo">
             Meu projeto!
         </h1>
     </header>
-
+    <!--                                           --- MAIN ---                                                     -->
+    <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
 </body>
 </html>
