4 - Lista de licoes aprendidas

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 
           <main>
               <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
+
+              <section id="licoes_aprendidas">
+                  <h2>Estudado</h2>
+                  <ol>
+                      <li>Unix/Shell</li>
+                      <li>Git</li>
+                      <li>Github</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Empatia</li>
+                      <li>Inteligência Emocional</li>
+                      <li>HTML semântico</li>
+                      <li>Internet</li>
+                      <li>Resiliência</li>
+                  </ol>
+              </section>
           </main>
       </body>
 </html>
