--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
             Titulo
         </h1>
     </header>
+    <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="Foto de um menino sorrindo">
 </body>
 </html>
