Adiçao de lista de liçoes que ainda serao aprendidas

--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
         <li>Inspect</li>
         <li>Zoom</li>
         <li>Slido</li>
-
       </ol>
+    </section>
+    <section>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>CSS Responsivo</li>
+        <li>JavaScript ES6</li>
+        <li>React</li>
+        <li>Metodologias Àgeis</li>
+        <li>Redux</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>NodeJS</li>
+      </ul>
     </section>
   </main>
 </body>
