[7] - Adiciona tag com link externo em footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li>Metodolodias Ágeis</li>
   </ul>
   <footer id="rodape">
-    <p>Natália Negreiros | Trybe</p>
+    <a href="https://github.com/negres" target="_blank">Natália Negreiros</a>
   </footer>
 </body>
 </html>
