--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
 
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
 
+    <section>
+        <ul id="licoes_a_aprender">
+            <li>Fundamentos do desenvolvimento web.</li>
+            <li>Terminal linux.</li>
+            <li>Git.</li>
+            <li>GitHub.</li>
+            <li>Internet.</li>
+            <li>HTML.</li>
+            <li>CSS.</li>
+            <li>A importância das soft skills.</li>
+            <li>Administrar melhor o tempo.</li>
+            <li>Definir prioridades.</li>
+        </ul>
     </section>
+
 
 </body>
 
