5 Adicionando lista ordenada

--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
     </header>
     <!--                                           --- MAIN ---                                                     -->
     <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
+    <ol id="licoes_aprendidas">
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+    </ol>
 </body>
 </html>
