--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Ana Luiza Machado Salgado</h1>
     </header>
+
+    <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado"> 
 </body>
