Sétimo requisito: Adiciona link externo a página

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
   <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto">
+  <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
     <li>Bash</li>
