Finishing requisite #3- GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned Project</h1>
     </header>
+    <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha-foto">
 </body>
 </html>
