--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <header id="cabecalho">
             <h1 id="titulo">titulo</h1>
         </header>
+        <figure><img id="minha_foto" src="minha_foto.jpg" alt=""></figure>
     </body>
 </html>
