--- a/index.html
+++ b/index.html
@@ -18,15 +18,28 @@
         <ol id="licoes_aprendidas">
             <li>Introdução Unix e Shell</li>
             <li>BASH</li>
+            <li>Conceitos de internet</li>
             <li>GIT</li>
             <li>GITHUB</li>
-            <li>HTML</li>
+            <li>HTML - Introdução</li>
+            <li>HTML - Estrutura de página</li>
             <li>CSS - Introdução</li>
             <li>CSS - Seletores e Posicionamento</li>
-            <li>HTML - Estrutura de página</li>
             <li>HTML - Semântico</li>
-            <li>Conceitos de internet</li>
         </ol>
+        <h3>Lições que ainda desejo aprender</h3>
+        <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>React</li>
+            <li>HTML e CSS responsivos</li>
+            <li>Javascript ES6</li>
+            <li>Javascript assincrono</li>
+            <li>Testes automatizados com JEST</li>
+            <li>Metodologias ageis</li>
+            <li>Gerenciamento de estado com Redux</li>
+            <li>Context API</li>
+            <li>React Hooks</li>
+        </ul>
     </main>
 </body>
 
