update html files

--- a/index.html
+++ b/index.html
@@ -42,21 +42,20 @@
                <article class="lado-esquerdo">
                   <h3><span class="fas fa-book contentIcons"></span>Trybe Course</h3>
                   <br>
-                  <p>
-                  Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido.
-                </p>
+                  <p> Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido. </p>
                </article>
+               
                <aside class="lado-direito">
-                  <h3><span class="fas fa-shapes contentIcons"></span>passagem sobre meu <br> aprendizado</h3>
+                  <h3><span class="fas fa-shapes contentIcons"></span>Sobre meu aprendizado</h3>
                   <br>
                   <p> Até agora, estamos aprendendo as estruturas básicas dos sistemas e ferramentas que abrirão muitas portas para nós neste vasto mundo de desenvolvimento: Shell Script, HTML, CSS, Git e GitHub. E acima de tudo isso, prática. </p>
                </aside>
 
          </main>
          <section>
-            <h3 class="list-title"><span class="fab fa-leanpub contentIcons"></span>Liçoes</h3>
+            <h3 class="list-title"><span class="fab fa-leanpub contentIcons"></span>Liçoes aprendidas e a aprender</h3>
             <br>
-            <article class="lists">
+            <div class="lists">
                <ol id="licoes_aprendidas">
                   <li>Unix</li>
                   <li>Git</li>
@@ -81,8 +80,8 @@
                   <li>Coding Skills</li>
                   <li>Best coding practices</li>
                </ul>
-            </article>
-            <article class="trybeLessons">
+            </div>
+            <div class="trybeLessons">
                <div class="lessons">
                   <h4>Liçoes para reforçar e aprender</h4>
                   <br>
@@ -103,7 +102,7 @@
                   <span class="lessonsLearned">Angular</span>
                   <span class="lessonsLearned">mySQL</span>
                </div>
-            </article>
+            </div>
          </section>
          <br>
          <section>
