--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <article>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>              
             </article>
+            <aside>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p>
+            </aside>
             <ol #licoes_aprendidas>
                 <li>Git</li>
                 <li>GitHub</li>
