step 3 | add image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Giovani Lopes Diccini</h1>
         </header>
+        <img id="minha_foto" src="giovani.jpeg" alt="imagem_autor">
     </body>
 </html>
