--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+      <h1 id="titulo"></h1>
     </header>
-    
-</body>
+
+    <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
+  </body>
 </html>
