terceiro e quarto requisito obrigatorio

--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
     <header id="cabecalho">
         <h1 id="titulo"></h1>
     </header>
+    <img id="minha_foto" src="rsz_genadi-imagem.jpg" alt=" homem em uma pista de corrida">
+    <ol id="licoes_aprendidas">
+        <H3>Lições aprendidas</H3>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+
+    </ol>
 </body>
 </html>
