--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="titulo">
       Lições Aprendidas - Trybe :)
     </h1>
-  </header>
+    <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
+  </header>  
 </body>
 </html>
