--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned Trybe :rocket:</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+</head id="cabecalho">
+    <h1 id="titulo">Luciano Rodrigues Lodi</h1>
+    <img id="minha_foto" src="Luciano Lodi.jpg" alt="Foto de Luciano Lodi">
 </head>
 <body>
-    <header id="cabecalho">
-        <h1>Luciano Rodrigues Lodi</h1>
-        <img id="minha_foto" src="Luciano Lodi.jpg" alt="Foto de Luciano Lodi">
-    </header>
+    <ol id="licoes_aprendidas">O que aprendi:</ol>
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Versionamento com Git e Github</li>
+    <li>Criar páginas com HTML</li>
+    <li>Estilizar páginas com CSS</li>
+    <li>Box Model</li>
+    <li>Acessibilidade com HTML Semântico</li>
+    <li>O Stomatopoda é um bicho muito doido!</li>
+    <li>A Trybe é demais!</li>
+    <li>A Turma 09 é sensacional! (Oliva que disse)</li>
+
 </body>
 </html>
