5 - lista de licoes a aprender

--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
                       <li>Resiliência</li>
                   </ol>
               </section>
+
+              <section id="licoes_a_aprendidas">
+                <h2>A estudar</h2>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>SQL</li>
+                    <li>NoSQL</li>
+                    <li>Responsividade</li>
+                    <li>Testes</li>
+                    <li>Trabalho em equipe</li>
+                    <li>Tomada de decisões</li>
+                    <li>Jest</li>
+                    <li>React</li>
+                    <li>Redux</li>
+                </ul>
+            </section>
           </main>
       </body>
 </html>
