--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>Projeto 1</title>
 </head>
 <body>
-	
+	<header id="cabecalho">
+		<h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+	</header>
 </body>
 </html>
