--- a/index.html
+++ b/index.html
@@ -18,44 +18,44 @@
             </table>
         </nav>
     </header>
-    <main>
+    <main id="corpoDaPag">
         <img src="minha_foto.jpg" alt="minha foto" id="minha_foto">
         <section id="listas">
             <ol id="licoes_aprendidas" class="listas">
-                    <li>Bash</li>
-                    <li>Internet</li>
-                    <li>Git</li>
-                    <li>Github</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Soft Skills</li>
-                    <li>Shell</li>
-                    <li>Unix</li>
-                    <li>Hard Skills</li>
-                </ol>
-                <ul id="licoes_a_aprender" class="listas">
-                    <li>JavaScript</li>
-                    <li>Node</li>
-                    <li>Back-End</li>
-                    <li>Lógica</li>
-                    <li>DOM</li>
-                    <li>React</li>
-                    <li>API</li>
-                    <li>SQL</li>
-                    <li>Frameworks</li>
-                    <li>Mais Soft Skills</li>
-                </ul>
-            </section>
-            <article class="texto">
-                <p>
-                    Antes de iniciar na Trybe eu estava tentando estudar programação à 3 meses, e só havia aprendido o básico de HTML e CSS, mas depois de 2 semanas no curso, eu já aprendi tudo que tinha ficado tanto tempo estudando e mais coisas, como Git, Github, Bash, Shell e Soft Skills. <br> A cada dia que passa e olho para trás, vejo o quanto estou evoluindo e sinto que entrar na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma das melhores escolhas que tomei na vida.
-                </p>
-            </article>
-            <aside class="texto">
-                <p>
-                    Antes de começar as aulas na Trybe, achei que por saber um pouco sobre o conteúdo inicial nem ia precisar me esforçar, e eu estava muito errado, as aulas são bem explicativas e didáticas, mas a matéria é intensa e estamos sempre aprendendo coisas novas e desafiadoras.
-                </p>
-            </aside>
+                <li>Bash</li>
+                <li>Internet</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Soft Skills</li>
+                <li>Shell</li>
+                <li>Unix</li>
+                <li>Hard Skills</li>
+            </ol>
+            <ul id="licoes_a_aprender" class="listas">
+                <li>JavaScript</li>
+                <li>Node</li>
+                <li>Back-End</li>
+                <li>Lógica</li>
+                <li>DOM</li>
+                <li>React</li>
+                <li>API</li>
+                <li>SQL</li>
+                <li>Frameworks</li>
+                <li>Mais Soft Skills</li>
+            </ul>
+        </section>
+        <article class="texto">
+            <p>
+                Antes de iniciar na Trybe eu estava tentando estudar programação à 3 meses, e só havia aprendido o básico de HTML e CSS, mas depois de 2 semanas no curso, eu já aprendi tudo que tinha ficado tanto tempo estudando e mais coisas, como Git, Github, Bash, Shell e Soft Skills. <br> A cada dia que passa e olho para trás, vejo o quanto estou evoluindo e sinto que entrar na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma das melhores escolhas que tomei na vida.
+            </p>
+        </article>
+        <aside class="texto">
+            <p>
+                Antes de começar as aulas na Trybe, achei que por saber um pouco sobre o conteúdo inicial nem ia precisar me esforçar, e eu estava muito errado, as aulas são bem explicativas e didáticas, mas a matéria é intensa e estamos sempre aprendendo coisas novas e desafiadoras.
+            </p>
+        </aside>
     </main>
     <footer id="rodape"><h4>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/" target="_blank">Tiago Paz</a></h4></footer>
 
