--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </section>
   </main>
   <footer id="rodape">
+    <a target="_blank" href="https://github.com/danimuller20">GitHub</a>
   </footer>
 </body>
 </html>
