--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
-        <article>    
+        <article>
             <section>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
@@ -43,5 +43,6 @@
             </section>
         </article>
     </main>
+    <footer id="rodape"> by Johne Alves</footer>
 </body>
 </html>
