--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <header id="cabecalho"git >
             <img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade">
             <h1 id="titulo">Lições Aprendidas: Trybe!</h1>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="https://www.betrybe.com/" target="_blank">Seja um Tryber!</a></li>
+                    <li><a href="#rodape">Sobre mim</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <h2>Lições Aprendidas</h2>
@@ -38,8 +44,6 @@
                 <li>Como liderar projetos</li>
                 <li>Como alcançar um emprego de alto nível</li>
             </ul>
-        </main>
-        <main id="home">
             <article>
                 <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
                 <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <b>2 semanas!</b><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
@@ -47,19 +51,9 @@
             <aside>
                 <section>
                     <h3>Por exemplo...</h3>
-                    <img src="okayhand.jpg" alt="ate agora tudo certo">
+                    <img id="okay" src="okayhand.jpg" alt="ate agora tudo certo">
                     <p>Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
-                </section>
-                <section>
-                </section>
             </aside>
-            <nav>
-                <h3>Referências</h3>
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </nav>
         </main>
         <footer id="rodape">
             <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
