--- a/index.html
+++ b/index.html
@@ -9,34 +9,42 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Henrique Brito Elias - Lições Aprendidas</h1>
+    <nav>
+      <ul>
+        <li>Início</li>
+        <li>Lições</li>
+      </ul>
+    </nav>
   </header>
   <img src="foto.jpg" alt="Foto de Henrique Brito Elias" id="minha_foto">
   <p><a href="https://github.com/henriquebelias" target="_blank">Henrique Brito Elias - GitHub</a></p>
-  <h3>Lições</h3>
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Git</li>
-    <li>GitHub</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Semantic HTML</li>
-    <li>Slack</li>
-    <li>Zoom</li>
-    <li>Aprendizagem Ativa</li>
-    <li>Auto-Conhecimento</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <li>JavaScript</li>
-    <li>DOM</li>
-    <li>Python</li>
-    <li>CSS Responsive</li>
-    <li>ES6</li>
-    <li>HOF</li>
-    <li>Unit Test</li>
-    <li>React</li>
-    <li>Node</li>
-    <li>SQL</li>
-  </ul>
+  <section>
+    <h3>Lições</h3>
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Semantic HTML</li>
+      <li>Slack</li>
+      <li>Zoom</li>
+      <li>Aprendizagem Ativa</li>
+      <li>Auto-Conhecimento</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>DOM</li>
+      <li>Python</li>
+      <li>CSS Responsive</li>
+      <li>ES6</li>
+      <li>HOF</li>
+      <li>Unit Test</li>
+      <li>React</li>
+      <li>Node</li>
+      <li>SQL</li>
+    </ul>
+  </section>
   <article>
     <p>Após duas semanas de Trybe consigo perceber a minha evolução, comecei sem nenhum conhecimento prévio na área do desenvolvimento, já que vim de outra completamente diferente. Hoje consigo fazer páginas web, que apesar de serem simples, já são um grande avanço para mim. Sei que daqui pra frente é só melhoria e vou com tudo para conseguir alcançar esse objetivo. #VQV #GoTrybe</p>
   </article>
