Adicionando lista ordenada e lista nao ordenada

--- a/index.html
+++ b/index.html
@@ -17,11 +17,41 @@
     <div id="corpo">
         <main>
             <article>
-                <section>
+                <section id="sec-foto">
                     <figure>
                         <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto" src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
                         <figcaption>Clique na foto para acessar meu instagram</figcaption>
                     </figure>
+                </section>
+
+                <section id="sec-aprendidas">
+                    <ol id="licoes_aprendidas">
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>Internet</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Semântica</li>
+                        <li>Acessibilidade</li>
+                        <li>Inspect</li>
+                    </ol>
+                </section>
+
+                <section id="sec-aprender">
+                    <ul id="licoes_a_aprender">
+                        <li>JavaScript</li>
+                        <li>Responsividade</li>
+                        <li>Jest</li>
+                        <li>RTL</li>
+                        <li>Redux</li>
+                        <li>API</li>
+                        <li>SQL</li>
+                        <li>MongoDB</li>
+                        <li>NodeJS</li>
+                        <li>Rest</li>
+                    </ul>
                 </section>
             </article>
         </main>
