--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
+        <title>Project lessons learned</title>
     </head>
     <body>
         <header id="cabecalho">
