adicionando os requisitos 6 e 7 do projeto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Marcelo Campos</h1>
+        <h1 id="titulo"> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
     </header>
     <main>
         <img id="minha_foto" src="images/me.jpg" alt="minha foto">
@@ -37,5 +37,9 @@
             <li>SQL</li>
         </ul>
     </main>
+    <footer id="rodape">
+        <p>Todos os direitos reservados, Marcelo.</p>
+		<p>Rua Andaluzita, Savassi 131 - 6º Andar - Belo Horizonte MG</p>
+    </footer>
 </body>
 </html>
