Oitavo requisito: Adiciona artigo sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
    <li>Node</li>
    <li>SQL</li>
   </ul>
+  <article>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem. Molestiae sapiente non pariatur.</p>
+  </article>
   <footer id="rodape"></footer>
 </body>
 </html>
