--- a/index.html
+++ b/index.html
@@ -14,37 +14,36 @@
           <main>
               <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
 
-              <section id="licoes_aprendidas">
+              <section>
                   <h2>Estudado</h2>
-                  <ol>
-                      <li>Unix/Shell</li>
-                      <li>Git</li>
-                      <li>Github</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                      <li>Empatia</li>
-                      <li>Inteligência Emocional</li>
-                      <li>HTML semântico</li>
-                      <li>Internet</li>
-                      <li>Resiliência</li>
-                  </ol>
+                    <ol id="licoes_aprendidas">
+                        <li>Unix/Shell</li>
+                        <li>Git</li>
+                        <li>Github</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Empatia</li>
+                        <li>Inteligência Emocional</li>
+                        <li>HTML semântico</li>
+                        <li>Internet</li>
+                        <li>Resiliência</li>
+                    </ol>
+
+                  <h2>A estudar</h2>
+                    <ul id="licoes_a_aprendidas">
+                        <li>JavaScript</li>
+                        <li>SQL</li>
+                        <li>NoSQL</li>
+                        <li>Responsividade</li>
+                        <li>Testes</li>
+                        <li>Trabalho em equipe</li>
+                        <li>Tomada de decisões</li>
+                        <li>Jest</li>
+                        <li>React</li>
+                        <li>Redux</li>
+                    </ul>
               </section>
 
-              <section id="licoes_a_aprendidas">
-                <h2>A estudar</h2>
-                <ul>
-                    <li>JavaScript</li>
-                    <li>SQL</li>
-                    <li>NoSQL</li>
-                    <li>Responsividade</li>
-                    <li>Testes</li>
-                    <li>Trabalho em equipe</li>
-                    <li>Tomada de decisões</li>
-                    <li>Jest</li>
-                    <li>React</li>
-                    <li>Redux</li>
-                </ul>
-            </section>
           </main>
       </body>
 </html>
