adicionando requisito 6 - rodape

--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
             <li>SQL</li>
         </ul>
     </main>
+
+    <footer id="rodape">
+        <span>Compilado por <a href="https://github.com/lcgoandete" target="_blank">Luis Carlos Goandete</a> - Todos os direitos Reservados.</span>
+    </footer>
 </body>
 </html>
