6 Adicionando lista desordenada

--- a/index.html
+++ b/index.html
@@ -16,16 +16,28 @@
     <!--                                           --- MAIN ---                                                     -->
     <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
     <ol id="licoes_aprendidas">
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
+        <li>Inteligência emocional</li>
+        <li>Soft-skills</li>
+        <li>Estruturas HTML</li>
+        <li>Semântica HTML</li>
+        <li>Estruturas CSS</li>
+        <li>Comandos do terminal</li>
+        <li>Como usar Git</li>
+        <li>Github</li>
+        <li>VSCode</li>
+        <li>Internet e como ela funciona</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+        <li>lorem3</li>
+    </ul>
 </body>
 </html>
