--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/style.css" />
 </head>
 
-<body></body>
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    </header>
+</body>
 
 </html>
