--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </header>
       <main>
         <img src="foto.jpg"  id="minha_foto">
-        <ul id="licoes_aprendidas">
+        <ol id="licoes_aprendidas">
             <h2>Lições Aprendidas:</h2>
             <li>Unix</li>
             <li>Git</li>
@@ -25,6 +25,19 @@
             <li>Zoom</li>
             <li>Inspect</li>
             <li>Semantic HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <h2>Lições a aprender:</h2>
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
         </ul>
       </main>
       
