--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
         <h1 id="titulo">Ana Luiza Machado Salgado</h1>
     </header>
 
-    <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado"> 
+<main>
+    <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado">
+    
+    <ol id="licoes_aprendidas">
+        <li>Unix & Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Empatia</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
+</main>
 </body>
