--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
             <li>Metodologias ageis</li>
             <li>Gerenciamento de estado com Redux</li>
             <li>Context API</li>
-            <li>React Hooks</li>
+            <li>React Hooks</li>https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md
         </ul>
     </main>
     <footer id="rodape">
 
+        <!--https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin-->
+        <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+                src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
     </footer>
 </body>
 
