--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <li>Unit Tests</li>
     </ul>
     </main>
-    <footer id="rodape"></footer>
+    <footer id="rodape">
+        <a id="link" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a>
+    </footer>
 </body>
 </html>
