[8] - Cria tag article

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     <li>Slack</li>
     <li>Empatia</li>
   </ol>
+  <article>
+    <header>
+      <h2>Minha evolução</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum itaque sed quis, consectetur dolorum, nostrum officia quo minus, tempora id deleniti. Labore voluptate repellat deleniti voluptas quia. Quibusdam, dolor blanditiis!
+      Aut quibusdam libero asperiores assumenda tenetur blanditiis odit earum harum, aliquid qui corporis nesciunt impedit consequuntur voluptates, reiciendis error vitae dolores! Nobis recusandae delectus debitis?</p>
+    </header>
+  </article>
   <ul id="licoes_a_aprender">
     <li>Lógica de Programação</li>
     <li>Javascript</li>
