Adicionada lições a aprender - HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
-        <ol class="licoes_aprendidas">
+        <ol id="licoes_aprendidas">
             <li>Fundamentos Web</li>
             <li>Unix & Bash</li>
             <li>Git & Github</li>
@@ -24,6 +24,18 @@
             <li>Soft Skills</li>
             <li>Emotional intelligence</li>
         </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>NodeJS</li>
+            <li>CSS (Responsive)</li>
+            <li>Unit Tests</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>DevOps</li>
+            <li>Scrum</li>
+            <li>Python3</li>
+        </ul>
     </main>
 </body>
 </html>
