Added profile picture and small fixes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <header id="cabecalho">
             <h1 id="titulo">Lessons Learned</h1>
         </header>
+        <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
     </body>
 </html>
