add step 10, section and nav

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <header id="cabecalho">
             <h1 id="titulo">titulo</h1>
             <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
+            <nav>
+                <a href="">Home</a>
+                <a href="">Reference</a>
+                <a href="">Contact</a>
+            </nav>
         </header>
         <main>
             <article>
@@ -19,30 +24,32 @@
             <aside>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p>
             </aside>
-            <ol #licoes_aprendidas>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Internet</li>
-                <li>CSS</li>
-                <li>VSCode</li>
-                <li>HTML</li>
-                <li>Economizar Dedos</li>
-                <li>Softskills</li>
-                <li>Hardskills</li>
-                <li>Bash</li>
-            </ol>
-            <ul #licoes_a_aprender>
-                <li>sao</li>
-                <li>tantas</li>
-                <li>coisas</li>
-                <li>que</li>
-                <li>fica</li>
-                <li>dificil</li>
-                <li>de</li>
-                <li>decorar</li>
-                <li>ou</li>
-                <li>enumerar</li>
-            </ul>
+            <section>            
+                <ol #licoes_aprendidas>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Internet</li>
+                    <li>CSS</li>
+                    <li>VSCode</li>
+                    <li>HTML</li>
+                    <li>Economizar Dedos</li>
+                    <li>Softskills</li>
+                    <li>Hardskills</li>
+                    <li>Bash</li>
+                </ol>
+                <ul #licoes_a_aprender>
+                    <li>sao</li>
+                    <li>tantas</li>
+                    <li>coisas</li>
+                    <li>que</li>
+                    <li>fica</li>
+                    <li>dificil</li>
+                    <li>de</li>
+                    <li>decorar</li>
+                    <li>ou</li>
+                    <li>enumerar</li>
+                </ul>
+            </section>
         </main>
         <footer #rodape>
             <a href="https://www.lipsum.com/">Gerador de Textos</a>
