--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas</h1>
     </header>
+    <section>
+        <img id="minha_foto" src="assets/img/perfil.jpeg" alt="Foto do Bruno">
+    </section>
+    
     
 </body>
 </html>
