6 - footer com id rodape

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
               <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
 
               <section>
-                  <h2>Estudado</h2>
+                    <h2>Estudado</h2>
+
                     <ol id="licoes_aprendidas">
                         <li>Unix/Shell</li>
                         <li>Git</li>
@@ -29,7 +30,7 @@
                         <li>Resiliência</li>
                     </ol>
 
-                  <h2>A estudar</h2>
+                    <h2>A estudar</h2>
                     <ul id="licoes_a_aprendidas">
                         <li>JavaScript</li>
                         <li>SQL</li>
@@ -43,7 +44,10 @@
                         <li>Redux</li>
                     </ul>
               </section>
-
           </main>
+
+          <footer id="rodape">
+            <p>Feito por Saulo Kirchmaier como projeto para Trybe</p>
+          </footer>
       </body>
 </html>
