(1) primeiro requisito - cor de fundo da pagina

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="br">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
