--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <head id="cabeçalho">
+    <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+  </head>  
 </body>
 </html>
