--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>
-            Titulo
-        </h1>
+        <h1>Titulo</h1>
     </header>
-    <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="Foto de um menino sorrindo">
+    <main>
+        <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="Foto de um menino sorrindo">
+        <ol>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Zoom</li>
+            <li>Slack</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Inspect</li>
+            <li>Forms</li>
+        </ol>
+    </main>
+    
 </body>
 </html>
