Requisito 4 - lista de lições aprendidas

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
             <h1 id="titulo">titulo</h1>
         </header>
         <figure><img id="minha_foto" src="minha_foto.jpg" alt=""></figure>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Hardware</li>
+            <li>Kernel</li>
+            <li>Tags</li>
+            <li>Git & GitHub</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>HTML Semântico</li>            
+        </ol>        
     </body>
 </html>
