--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
+    <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
 </body>
 </html>
