--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
     <title>Lessons Learned</title>
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
-    <img id="minha_foto" src="eu.png" alt="Foto de João Henrique andando de barco">
+    <div class="container">
+        <section>
+            <div class="image_base">
+                <img id="minha_foto" src="eu.png" alt="Foto de João Henrique andando de barco">
+            </div>
+            <h2>João Henrique R.Sá</h2>
+        </section>
+        <section>
+            <h2>Lições</h2>
+            <h4>Aprendidas</h4>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Inpect</li>
+                <li>Semantic HTML</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+            </ol>
+            <h4>A aprender</h4>
+            <ul id="licoes_a_aprender">
+                <li>CI/CD</li>
+                <li>Server Monitoring</li>
+                <li>Unit Tests</li>
+                <li>Tests E2E</li>
+                <li>HOF</li>
+                <li>React</li>
+                <li>Nodejs</li>
+                <li>SQL</li>
+                <li>Sequelize</li>
+                <li>CSS Responsive</li>
+            </ul>
+        </section>
+    </div>
 </body>
+
 </html>
