--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 id="cabecalho">lessons learned</h1> 
+    <h1 id="cabecalho">lessons learned</h1>
+    <img id="minha_foto" src="rsz_whatsapp_image_2020-11-05_at_134848.jpg" alt="minha foto">
   </body>
 </html>
