correçoes para os 2 primeiros requisitos

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     
-    <header id="cabeçalho">
-        <h1 id="título">Lições Aprendidas - Trybe!</h1>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </header>
-    
+
 </body>
 </html>
