update html files

--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
          </header>
          <hr>
          <main class="main">
-
                <article class="lado-esquerdo">
-                  <h3><span class="fas fa-book contentIcons"></span>Trybe Course</h3>
-                  <br>
+                <h3><p class="fas fa-book contentIcons"></p>Course</h3>
                   <p> Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido. </p>
                </article>
-               
+
                <aside class="lado-direito">
-                  <h3><span class="fas fa-shapes contentIcons"></span>Sobre meu aprendizado</h3>
+                  <h3><p class="fas fa-shapes contentIcons"></p>Sobre aprendizado</h3>
                   <br>
                   <p> Até agora, estamos aprendendo as estruturas básicas dos sistemas e ferramentas que abrirão muitas portas para nós neste vasto mundo de desenvolvimento: Shell Script, HTML, CSS, Git e GitHub. E acima de tudo isso, prática. </p>
                </aside>
@@ -54,7 +52,6 @@
          </main>
          <section>
             <h3 class="list-title"><span class="fab fa-leanpub contentIcons"></span>Liçoes aprendidas e a aprender</h3>
-            <br>
             <div class="lists">
                <ol id="licoes_aprendidas">
                   <li>Unix</li>
@@ -93,7 +90,7 @@
                   <span class="lessonsLearned">Semanthic HTML</span>
                </div>
                <div class="lessons rightlessons ">
-                  <h4>Outras Liçoes a aprender</h4>
+                  <h4>Tecnologias onde estou interessado</h4>
                   <br>
                   <span class="lessonsLearned">FlexBox</span>
                   <span class="lessonsLearned">Grid</span>
@@ -104,6 +101,7 @@
                </div>
             </div>
          </section>
+         <br>
          <br>
          <section>
             <h4><span class="fas fa-project-diagram contentIcons"></span>Exercícios realizados</h3>
