Requisito 3 - Foto de perfil

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header id="cabecalho">
         <h1 id="titulo">The Road So Far</h1>
     </header>
+    <main>
+        <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
+    </main>
 </body>
 </html>
