--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
     <title>Lessons learned</title>
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas na Trybe</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Sobre</a>
+    </nav>
+
+    <img src="eu.jpg" alt="Foto de Carine Becker" id="minha_foto">
+    <a href="http://github.com/carinebecker" target="_blank">Carine Becker</a>
     
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>GIT</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Empatia</li>
+            <li>Trabalho em equipe</li>
+        </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>React</li>
+            <li>Jest</li>
+            <li>Metodologias ágeis</li>
+            <li>RTL</li>
+            <li>Redux</li>
+            <li>React Hooks</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>NodeJS</li>
+            <li>SOLID</li>
+        </ul>
+    </section>
+
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum aliquam corrupti fuga officiis at animi quisquam distinctio alias perspiciatis? Modi, molestiae! Aspernatur perferendis eveniet temporibus aut beatae. Mollitia, sunt. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, magni sunt, quia cupiditate quasi nemo similique quo deserunt voluptatibus at laborum explicabo accusamus! Rem, nam. Amet facilis praesentium aperiam eius!</p>
+    </article>
+
+    <aside>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, commodi nobis debitis earum ex quia tempora, accusamus consectetur fugiat, saepe soluta quasi! Neque doloremque alias commodi earum corporis, veniam architecto.</p>
+    </aside>
+
+    <footer id="rodape"></footer>
+
 </body>
 </html>
