--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
+    <img src="/minhaimg.jpeg" alt="minha foto">
 </body>
 
 </html>
