--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 
     <main>
         <img id="minha_foto" src="img/minha_foto.jpg" alt="Minha foto">
+
+        <ol id="licoes_aprendidas"">
+            <li>item1</li>
+            <li>item2</li>
+            <li>item3</li>
+            <li>item4</li>
+            <li>item5</li>
+            <li>item6</li>
+            <li>item7</li>
+            <li>item8</li>
+            <li>item9</li>
+            <li>item10</li>
+        </ol>
     </main>
 
 </body>
