--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
     <body>
-        
+        <nav id="cabecalho">
+            <header id="titulo">
+                <h1>Lucas Silva - DEV</h1>
+            </header>
+        </nav>
     </body>
 </html>
