--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
       </nav>
     </header>
-<!--  A foto deve ser inserida utilizando
-      uma tag img com o ID "minha_foto" -->
+
+<!--  A foto deve ser inserida utilizando uma tag img com o ID "minha_foto" -->
     <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
+
 <!--  A lista deve ser numerada e possuir o ID "licoes_aprendidas" -->
     <ul id="licoes_aprendidas">
 <!-- A lista deve possuir 10 itens -->
@@ -31,6 +32,7 @@
       <li>Colaboração</li>
       <li>Empatia</li>
     </ul>
+
 <!--  A lista deve ser numerada e possuir o ID "licoes_a_aprender" -->
     <ul id="licoes_a_aprender">
 <!-- A lista deve possuir 10 itens -->
@@ -45,10 +47,27 @@
       <li>Back-End</li>
       <li>Node.JS</li>
     </ul>
-<!-- A configuração desse link deve ser feita para 
-     abrir em uma nova aba do navegador -->
+
+<!-- A configuração desse link deve ser feita para abrir em uma nova aba do navegador -->
     <a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a>
 
+<!-- O artigo deve ter mais de 300 letras e menos de 600 -->
+    <article>
+      <p>É ótimo estar estudando com pessoas tão dedicadas e legais, isso cria um ambiente muito bom
+        e prazeroso de estar e a forma como somos desafiados todos os dias me motiva cada vez mais à
+        dar o meu melhor pois somente assim conseguimos ir pra frente e mudar de vida, acredito que a
+        o que conheço hoje não é nem 10% do irei conhecer ao final deste curso pois as aulas são muito
+        bem feitas e muito explicativas, além de contarmos com o apoio dos instrutores.</p>
+    </article>
+
+<!-- A seção deve ter mais que 100 letras e menos que 300 -->
+    <aside>
+      <p>Quando comecei a estudar Git, logo no começo do curso, percebi a forma como o <strong>Gabriel
+        Oliva</strong> passava o conteúdo era muito boa, além dos vídeos e dos artigos extras que sempre
+        estão disponíveis pra acrescentar nos estudos.</p>
+    </aside>
+
+<!-- O rodapé deve utilizar a tag footer e possuir o ID "rodape" -->
     <footer id="rodape">
       Desenvolvido por: Felipe Brigagão de Almeida - 24 de Novembro de 2020.
     </footer>
