--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lições Aprendidas</h1>
-        </header>
+        <main>
+            <header id="cabecalho">
+                <h1 id="titulo">Lições Aprendidas</h1>
+            </header>
+            <img id="minha_foto"src="MinhaFoto.jpg" alt="minha foto">
+        </main>
     </body>
 </html>
