--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <section>
         <img id="minha_foto" src="assets/img/perfil.jpeg" alt="Foto do Bruno">
     </section>
-    
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+    </section>
+
     
 </body>
 </html>
