--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="https://www.betrybe.com/">Trybe</a></li>
+            <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
         </ul>
     </header>
 
@@ -23,14 +23,14 @@
 
     <section>
         <ul id="licoes_a_aprender">
-            <li>Fundamentos do desenvolvimento web.</li>
-            <li>Terminal linux.</li>
+            <li>Javascript.</li>
+            <li>React.</li>
+            <li>Redux.</li>
             <li>Git.</li>
-            <li>GitHub.</li>
-            <li>Internet.</li>
-            <li>HTML.</li>
-            <li>CSS.</li>
-            <li>A importância das soft skills.</li>
+            <li>SQL.</li>
+            <li>Python.</li>
+            <li>SCRUM.</li>
+            <li>Soft skills.</li>
             <li>Administrar melhor o tempo.</li>
             <li>Definir prioridades.</li>
         </ul>
