--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
             <li>SQL</li>
         </ul>
       </main>
+      <footer id="rodape">
+          <nav>
+              <li><a href="https://www.linkedin.com/in/raphaelmlrego/">Likedin de Raphael</a></li>
+              <li><a href="https://github.com/regoraphael">GitHub de Raphael</a></li>
+          </nav>
+      </footer>
       
   </body>
