--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Osvaldo Borges Campos Neto</h1>
     </header>
-    
+    <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
 </body>
 </html>
