--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             </section>
         </article>
     </main>
-    <footer id="rodape"> by Johne Alves</footer>
+    <footer id="rodape"> by <a href="https://www.linkedin.com/in/johne-alves/" target="blanch">Johne Alves</a></footer>
 </body>
 </html>
