--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
-    <img src="/minhaimg.jpeg" alt="minha foto">
+    <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto">
 </body>
 
 </html>
