Nono requisito: Adiciona seção com tag aside

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto | Lessons Learned</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
+
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
@@ -25,19 +27,32 @@
     <li>Inteligência emocional</li>
   </ol>
   <ul id="licoes_a_aprender">
-   <li>Javascript</li>
-   <li>DOM</li>
-   <li>Forms</li>
-   <li>CSS responsivo</li>
-   <li>ES6</li>
-   <li>HOF</li>
-   <li>Testes unitários</li>
-   <li>React</li>
-   <li>Node</li>
-   <li>SQL</li>
+    <li>Javascript</li>
+    <li>DOM</li>
+    <li>Forms</li>
+    <li>CSS responsivo</li>
+    <li>ES6</li>
+    <li>HOF</li>
+    <li>Testes unitários</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>SQL</li>
   </ul>
   <article>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem. Molestiae sapiente non pariatur.</p>
+    <section>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
+        consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+        sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis
+        consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
+        Molestiae sapiente non pariatur.</p>
+    </section>
+    <section>
+      <aside>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
+          consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+          sunt Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </aside>
+    </section>
   </article>
   <footer id="rodape"></footer>
 </body>
