Adiçao de article

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <li>NodeJS</li>
       </ul>
     </section>
+    <section>
+      <article>
+        <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Também aprendi sobre HTMl e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
+      </article>
+    </section>
   </main>
   <footer id="rodape">
     <a target="_blank" href="https://github.com/danimuller20">GitHub</a>
